loopfor.LoopStairs.scala.error
Compilation error:
LoopStairs:4: error: '(' expected but identifier found.
while isFaccingWall() {
      ^