loopfor.LoopStairs.scala.code
while (! isFaccingWall()) {
  forward()
}
while isFaccingWall() {
	left() ; forward() ; right() ; forward()
}
forward(4)